add user Repository

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.datasource.url=jdbc:mariadb://localhost:3306/social_media
+spring.datasource.username=root
+spring.datasource.password=ali33
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
